--- a/Solucion/package.json
+++ b/Solucion/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "ngx-cookie-service": "^11.0.2",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.0",
     "rxjs": "~6.6.0",
