--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@ngx-formly/core": "^5.10.18",
+    "angular-cli-ghpages": "^2.0.3",
     "crypto": "^1.0.1",
     "multer": "^1.4.2",
     "ngx-cookie-service": "^11.0.2",
