--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider  && gulp buildDev && ng serve ",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,26 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.12",
-    "@angular/cdk": "^11.2.11",
-    "@angular/common": "~11.2.12",
-    "@angular/compiler": "~11.2.12",
-    "@angular/core": "~11.2.12",
-    "@angular/forms": "~11.2.12",
-    "@angular/platform-browser": "~11.2.12",
-    "@angular/platform-browser-dynamic": "~11.2.12",
-    "@angular/router": "~11.2.12",
-    "@ngx-formly/core": "^5.10.18",
+    "@angular/animations": "~18.2.9",
+    "@angular/cdk": "^18.2.10",
+    "@angular/common": "~18.2.9",
+    "@angular/compiler": "~18.2.9",
+    "@angular/core": "~18.2.9",
+    "@angular/forms": "~18.2.9",
+    "@angular/platform-browser": "~18.2.9",
+    "@angular/platform-browser-dynamic": "~18.2.9",
+    "@angular/router": "~18.2.9",
+    "@ngx-formly/core": "^6.3.10",
     "angular-cli-ghpages": "^2.0.3",
     "crypto": "^1.0.1",
-    "multer": "^1.4.2",
-    "ngx-cookie-service": "^11.0.2",
+    "multer": "^1.4.4",
+    "ngx-cookie-service": "^18.0.0",
     "path": "^0.12.7",
-    "primeicons": "^4.1.0",
-    "primeng": "^11.4.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.0",
+    "zone.js": "~0.15.0"
   },
   "browser": {
     "fs": false,
@@ -38,22 +38,22 @@
     "os": false
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.11",
-    "@angular/cli": "~11.2.11",
-    "@angular/compiler-cli": "~11.2.12",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.11",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "~18.2.10",
+    "@angular/cli": "~18.2.10",
+    "@angular/compiler-cli": "~18.2.9",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^22.8.1",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~5.4.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "ts-node": "~10.9.2",
+    "tslint": "~6.1.3",
+    "typescript": "~5.6.3"
   }
 }
